Started development on UI

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-<script src="content.js"></script>
+    <div class="grid-ui">
+        <div class="grid-ui-item">1</div>
+        <div class="grid-ui-item">2</div>
+        <div class="grid-ui-item">3</div>
+    </div>
+    <script src="content.js"></script>
 </body>
 </html>
