--- a/ui/index.html
+++ b/ui/index.html
@@ -8,14 +8,7 @@
 <body>
     <div class="grid-ui">
         <div class="grid-ui-item" id="controls"></div>
-        <div class="grid-ui-item" id="player">
-            <div id="video_information">
-                <span>Delicate Weapon by Grimes - Topic</span><br/>
-                <a href="https://www.youtube.com/watch?v=KTJQiGRQS8Q">Video</a>
-            </div>
-            <img src="https://i.ytimg.com/vi_webp/U6PSsSM1swQ/maxresdefault.webp" alt="thumbnail"
-                 style="width: 80px; height: 40px">
-        </div>
+        <div class="grid-ui-item" id="player"></div>
         <div class="grid-ui-item" id="search" style="display: none"></div>
     </div>
 
